test/ovl/calico-egress/default/etc/kubernetes/load/apiserver.yaml
# This is a tech-preview manifest which installs the Calico API server. Note that this manifest is liable to change
# or be removed in future releases without further warning.
#
# Namespace and namespace-scoped resources.
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: calico-apiserver
  name: calico-apiserver
spec:

---

# Policy to ensure the API server isn't cut off. Can be modified, but ensure 
# that the main API server is always able to reach the Calico API server.
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-apiserver
  namespace: calico-apiserver
spec:
  podSelector:
    matchLabels:
      apiserver: "true"
  ingress:
  - ports:
    - protocol: TCP
      port: 5443

---

apiVersion: v1
kind: Service
metadata:
  name: calico-api
  namespace: calico-apiserver
spec:
  ports:
  - name: apiserver
    port: 443
    protocol: TCP
    targetPort: 5443
  selector:
    apiserver: "true"
  type: ClusterIP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    apiserver: "true"
    k8s-app: calico-apiserver
  name: calico-apiserver
  namespace: calico-apiserver
spec:
  replicas: 1
  selector:
    matchLabels:
      apiserver: "true"
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        apiserver: "true"
        k8s-app: calico-apiserver
      name: calico-apiserver
      namespace: calico-apiserver
    spec:
      containers:
      - args:
        - --secure-port=5443
        - -v=5
        env:
        - name: DATASTORE_TYPE
          value: kubernetes
        image: docker.io/calico/apiserver:v3.24.1
        livenessProbe:
          httpGet:
            path: /version
            port: 5443
            scheme: HTTPS
          initialDelaySeconds: 90
          periodSeconds: 10
        name: calico-apiserver
        readinessProbe:
          exec:
            command:
            - /code/filecheck
          failureThreshold: 5
          initialDelaySeconds: 5
          periodSeconds: 10
        securityContext:
          privileged: false
          runAsUser: 0
        volumeMounts:
        - mountPath: /code/apiserver.local.config/certificates
          name: calico-apiserver-certs
      dnsPolicy: ClusterFirst
      nodeSelector:
        kubernetes.io/os: linux
      restartPolicy: Always
      serviceAccount: calico-apiserver
      serviceAccountName: calico-apiserver
      tolerations:
      - effect: NoSchedule
        key: node-role.kubernetes.io/master
      volumes:
      - name: calico-apiserver-certs
        secret:
          secretName: calico-apiserver-certs

---

apiVersion: v1
kind: ServiceAccount
metadata:
  name: calico-apiserver 
  namespace: calico-apiserver 

---

# Cluster-scoped resources below here.
apiVersion: v1
data:
  apiserver.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZEVENDQXZXZ0F3SUJBZ0lVSzE2Qmp4dXRiRW1PemZwSDhaSXdoR1FsYUljd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0FEQWVGdzB5TWpBNU1qSXhNRFV4TkRCYUZ3MHlNekE1TWpJeE1EVXhOREJhTUFBd2dnSWlNQTBHQ1NxRwpTSWIzRFFFQkFRVUFBNElDRHdBd2dnSUtBb0lDQVFENFVmbSsvdklzUTFGNHBNVHkwSG1PWVJMTWlzSURTSGt5CmdXbitmMnJYYmRnYlZtNEZvVHpOS3dQeVV0SlNzNWc4akhFL1YrSk9zQS82N1NxODg5MEFQSXlkYisxMHBFL04KODBYNWFFVXdkY0RKYUxKcDVmQlZzNDdtNEhDVjB4RGQ5Snp2Z3JLc21ZaTJSbTNoaWIvdWZSZzJISmRNRTVZTgpCZDdxa2lCTDB [...]
  apiserver.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUpRd0lCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQ1Mwd2dna3BBZ0VBQW9JQ0FRRDRVZm0rL3ZJc1ExRjQKcE1UeTBIbU9ZUkxNaXNJRFNIa3lnV24rZjJyWGJkZ2JWbTRGb1R6Tkt3UHlVdEpTczVnOGpIRS9WK0pPc0EvNgo3U3E4ODkwQVBJeWRiKzEwcEUvTjgwWDVhRVV3ZGNESmFMSnA1ZkJWczQ3bTRIQ1YweERkOUp6dmdyS3NtWWkyClJtM2hpYi91ZlJnMkhKZE1FNVlOQmQ3cWtpQkwwdE1RNW9NVDlpczQvMnNtNFdKeDhjQzliMUYrbzVHYnMvSE8KY3RTeERKS0pCZnlLeGllc1ZkTWcrdDh3bVRnUlUvdGxFYS9Fb0srZ3JJNHNacjdjZ3FNdWhzVlVYV1F1WEhidgplNEdMdDhlVWh [...]
kind: Secret
metadata:
  name: calico-apiserver-certs
  namespace: calico-apiserver
type: Opaque
--- 

apiVersion: apiregistration.k8s.io/v1
kind: APIService
metadata:
  name: v3.projectcalico.org
spec:
  caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZEVENDQXZXZ0F3SUJBZ0lVSzE2Qmp4dXRiRW1PemZwSDhaSXdoR1FsYUljd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0FEQWVGdzB5TWpBNU1qSXhNRFV4TkRCYUZ3MHlNekE1TWpJeE1EVXhOREJhTUFBd2dnSWlNQTBHQ1NxRwpTSWIzRFFFQkFRVUFBNElDRHdBd2dnSUtBb0lDQVFENFVmbSsvdklzUTFGNHBNVHkwSG1PWVJMTWlzSURTSGt5CmdXbitmMnJYYmRnYlZtNEZvVHpOS3dQeVV0SlNzNWc4akhFL1YrSk9zQS82N1NxODg5MEFQSXlkYisxMHBFL04KODBYNWFFVXdkY0RKYUxKcDVmQlZzNDdtNEhDVjB4RGQ5Snp2Z3JLc21ZaTJSbTNoaWIvdWZSZzJISmRNRTVZTgpCZDdxa2lCTDB0TVE1 [...]
  group: projectcalico.org
  groupPriorityMinimum: 1500
  service:
    name: calico-api
    namespace: calico-apiserver
    port: 443
  version: v3
  versionPriority: 200

---

apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: calico-crds
rules:
- apiGroups:
  - extensions
  - networking.k8s.io
  - ""
  resources:
  - networkpolicies
  - nodes
  - namespaces
  - pods
  - serviceaccounts
  verbs:
  - get
  - list
  - watch
- apiGroups:
  - crd.projectcalico.org
  resources:
  - globalnetworkpolicies
  - networkpolicies
  - clusterinformations
  - hostendpoints
  - globalnetworksets
  - networksets
  - bgpconfigurations
  - bgppeers
  - felixconfigurations
  - kubecontrollersconfigurations
  - ippools
  - ipreservations
  - ipamblocks
  - blockaffinities
  - caliconodestatuses
  - ipamconfigs
  verbs:
  - get
  - list
  - watch
  - create
  - update
  - delete
- apiGroups:
  - policy
  resourceNames:
  - calico-apiserver
  resources:
  - podsecuritypolicies
  verbs:
  - use

---

apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: calico-extension-apiserver-auth-access
rules:
- apiGroups:
  - ""
  resourceNames:
  - extension-apiserver-authentication
  resources:
  - configmaps
  verbs:
  - list
  - watch
  - get
- apiGroups:
  - rbac.authorization.k8s.io
  resources:
  - clusterroles
  - clusterrolebindings
  - roles
  - rolebindings
  verbs:
  - get
  - list
  - watch

---

apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: calico-webhook-reader
rules:
- apiGroups:
  - admissionregistration.k8s.io
  resources:
  - mutatingwebhookconfigurations
  - validatingwebhookconfigurations
  verbs:
  - get
  - list
  - watch

---

apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: calico-apiserver-access-crds
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: calico-crds
subjects:
- kind: ServiceAccount
  name: calico-apiserver
  namespace: calico-apiserver

---

apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: calico-apiserver-delegate-auth
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: system:auth-delegator
subjects:
- kind: ServiceAccount
  name: calico-apiserver
  namespace: calico-apiserver

---

apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: calico-apiserver-webhook-reader
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: calico-webhook-reader
subjects:
- kind: ServiceAccount
  name: calico-apiserver
  namespace: calico-apiserver

---

apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: calico-extension-apiserver-auth-access
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: calico-extension-apiserver-auth-access
subjects:
- kind: ServiceAccount
  name: calico-apiserver
  namespace: calico-apiserver
